--- a/_settings.scss
+++ b/_settings.scss
@@ -32,6 +32,8 @@ $color-black:           #000;
  */
 $font-ratio-header:     1.314159;
 
+$h1-font-weight:        lighter;
+
 $font-size-small-h1:    $font-size-h1 - 15px;
 $font-size-small-h2:    $font-size-h2 - 8px;
 $font-size-small-h3:    $font-size-h3 - 5px;
@@ -42,6 +44,8 @@ $font-size-small-h5:    $font-size-h5 - 2px;
 /**
  * #BUTTONS
  */
+$btn-font-size:         16px;
+
 $btn-secondary-color:   #fff;
 $btn-secondary-bg:      $color-secondary;
 $btn-secondary-border:  #595455;
@@ -49,6 +53,13 @@ $btn-secondary-border:  #595455;
 $btn-subtle-color:      #fff !default;
 $btn-subtle-bg:         $brand-primary !default;
 $btn-subtle-border:     darken($btn-primary-bg, 5%) !default;
+
+
+
+/**
+ * #NAVBAR
+ */
+$navbar-box-shadow:     0 0 6px rgba(6,8,8,0.15);
 
 
 /**
