--- a/_settings.scss
+++ b/_settings.scss
@@ -45,6 +45,7 @@ $font-size-small-h5:    $font-size-h5 - 2px;
  * #BUTTONS
  */
 $btn-font-size:         16px;
+$btn-border-size:       1px;
 
 $btn-secondary-color:   #fff;
 $btn-secondary-bg:      $color-secondary;
