--- a/bootstrap-variations/_pagination.scss
+++ b/bootstrap-variations/_pagination.scss
@@ -6,6 +6,7 @@
     padding-left: 0;
     margin: $line-height-computed 0;
     border-radius: $border-radius-base;
+    width: 100%;
 
     > li {
         display: inline; // Remove list-style and block-level defaults
