--- a/bootstrap-variations/_pagination.scss
+++ b/bootstrap-variations/_pagination.scss
@@ -8,19 +8,26 @@
     border-radius: $border-radius-base;
     width: 100%;
 
-    > li {
+    li {
         display: inline; // Remove list-style and block-level defaults
         
-        > a,
-        > span {
+        a,
+        span {
             position: relative;
             //float: left; // Collapse white-space
+            padding: 8px $padding-base-horizontal;
+            line-height: $line-height-base;
+            text-decoration: none;
+            color: $pagination-color;
+            background-color: $pagination-bg;
+            border: 1px solid $pagination-border;
             margin-left: 4px;
+            border-radius: $border-radius-base;
         }
             
         &:first-child {
-            > a,
-            > span {
+            a,
+            span {
                 margin-left: 0;
                 
                 @include border-left-radius($border-radius-base);
@@ -28,15 +35,25 @@
         }
         
         &:last-child {
-            > a,
-            > span {
+            a,
+            span {
                 @include border-right-radius($border-radius-base);
             }
         }
     }
 
-    > .active > a,
-    > .active > span {
+    li a,
+    li span {
+        &:hover,
+        &:focus {
+            color: $pagination-hover-color;
+            background-color: $pagination-hover-bg;
+            border-color: $pagination-hover-border;
+        }
+    }
+
+    .active a,
+    .active span {
         &,
         &:hover,
         &:focus {
@@ -48,13 +65,13 @@
         }
     }
 
-    > .disabled {
-        > span,
-        > span:hover,
-        > span:focus,
-        > a,
-        > a:hover,
-        > a:focus {
+    .disabled {
+        span,
+        span:hover,
+        span:focus,
+        a,
+        a:hover,
+        a:focus {
             color: $pagination-disabled-color;
             background-color: $pagination-disabled-bg;
             border-color: $pagination-disabled-border;
