--- a/_settings.scss
+++ b/_settings.scss
@@ -44,17 +44,19 @@ $font-size-small-h5:    $font-size-h5 - 2px;
 /**
  * #BUTTONS
  */
-$btn-font-size:         16px;
-$btn-border-size:       1px;
+$btn-font-size:           16px;
+$btn-border-size:         1px;
 
-$btn-secondary-color:   #fff;
-$btn-secondary-bg:      $color-secondary;
-$btn-secondary-border:  #595455;
+$btn-secondary-color:     #fff;
+$btn-secondary-bg:        $color-secondary;
+$btn-secondary-border:    #595455;
 
-$btn-subtle-color:      #fff !default;
-$btn-subtle-bg:         $brand-primary !default;
-$btn-subtle-border:     darken($btn-primary-bg, 5%) !default;
-
+$btn-subtle-color:        #6d6e71;
+$btn-subtle-bg:           #f4f4f4;
+$btn-subtle-border:       #e7e7e7;
+$btn-subtle-state-color:  $color-white;
+$btn-subtle-state-bg:     #666062;
+$btn-subtle-state-border: #595455;
 
 
 /**
