Adding pagination specificity

--- a/components/_pagination.scss
+++ b/components/_pagination.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
  #PAGINATION
 \*------------------------------------*/
-.pagination-secondary {
+.pagination-secondary li a {
     color: $btn-secondary-color;
     background-color: $btn-secondary-bg;
     border-color: $btn-secondary-border;
