Adding values to help with styleguide

--- a/_settings.scss
+++ b/_settings.scss
@@ -22,6 +22,12 @@ $color-secondary:       $color-gray;
 
 $brand-primary:         $color-primary;
 
+$color-info:            $brand-info;
+$color-success:         $brand-success;
+$color-warning:         $brand-warning;
+$color-danger:          $brand-danger;
+
+$color-background:      #f7f7f7;
 $color-text:            #3a3a3a;
 $color-black:           #000;
 
