--- a/generic/_helpers.scss
+++ b/generic/_helpers.scss
@@ -39,11 +39,11 @@
 /**
  * Font weights
  */
-.weight--light,      %weight--light     { font-weight: 100 !important; }
-.weight--semi-light, %weight--semilight { font-weight: 300 !important; }
-.weight--normal,     %weight--normal    { font-weight: 400 !important; }
-.weight--semibold,   %weight--semibold  { font-weight: 500 !important; }
-.weight--bold,       %weight--bold      { font-weight: 600 !important; }
+.weight--light,      %weight--light     { font-weight: $font-weight-1 !important; }
+.weight--semi-light, %weight--semilight { font-weight: $font-weight-3 !important; }
+.weight--normal,     %weight--normal    { font-weight: $font-weight-4 !important; }
+.weight--semibold,   %weight--semibold  { font-weight: $font-weight-5 !important; }
+.weight--bold,       %weight--bold      { font-weight: $font-weight-6 !important; }
 
 
 
