--- a/base/_type.scss
+++ b/base/_type.scss
@@ -2,77 +2,11 @@
  #TYPE
 \*------------------------------------*/
 
-.pullquote {
-    border-left-color: transparent;
-    margin: 48px 0;
-    text-align: center;
-    padding-left: 0;
 
-    @include transition(margin, 0.1s);
-    
-    @include mq(501px) {
-        margin: 48px -10px;
-    }
-
-    @include mq(1001px) {
-        margin: 48px -100px;
-    }
-
-    em, 
-    strong {
-        font-weight: 500;
-        font-style: normal;
-        font-size: 110%;
-    }
-}
-	
-q,
-blockquote:not(.pullquote) em {
-    quotes:"“" "”";
-
-    &:before {
-        content: "“";
-        content: open-quote;
-    }
-
-    &:after {
-        content: "“";
-        content: close-quote;
-    }
-
-    q:before {
-        content: "“";
-        content: open-quote;
-    }
-
-    q:after {
-        content: "“";
-        content: close-quote;
-    }
-
-    /**
-     * If an element opens with an inline quote, let’s hang that.
-     */
-    &.opener {
-        display: inline-block;
-        
-        text-indent: -0.22em;
-    }
-	
-    &:first-child {
-        display: inline-block;
-        
-        text-indent: 0;
-    }
-}
-
-figcaption {
-    line-height: 1.6;
-    margin: 5px 0 15px;
-    margin: 0.26316rem 0 0.78947rem;
-    @include font-size(14px, false);
-}
-
+/**
+ * Horizontal Rules: .section-divider is for special callout breaks
+ * like the footer on cru.org
+ */
 .section-divider {
-    border-color: #f9b625;
+    border-color: $color-gold;
 }
