SMACSSing part II

--- a/base/_images.scss
+++ b/base/_images.scss
@@ -1,11 +1,14 @@
 /*------------------------------------*\
- #IMAGES
+    #IMAGES
 \*------------------------------------*/
 
 img {
     @include img-responsive();
 }
 
+/**
+ * This is a hack to force iframes inside panels to fit the full width.
+ */
 .panel-body iframe {
     display: block;
     max-width: 100%;
