--- a/modules/_rules.scss
+++ b/modules/_rules.scss
@@ -1,7 +1,6 @@
 /*------------------------------------*\
- #TYPE
+    #RULES
 \*------------------------------------*/
-
 
 /**
  * Horizontal Rules: .section-divider is for special callout breaks
