--- a/modules/_cru-logo.scss
+++ b/modules/_cru-logo.scss
@@ -2,7 +2,7 @@
     #LOGO
 \*------------------------------------*/
 
-.cru-logo {
+.cruLogo {
     background: url("//www.cru.org/images/cru-logo.svg") no-repeat center center;
     display: block;
     width: 100%;
@@ -12,6 +12,6 @@
 /**
  * This provides a fallback for browsers that do not support svg.
  */
-.no-svg .cru-logo {
+.no-svg .cruLogo {
     background-image: url("//www.cru.org/images/cru-logo.png");
 }
