--- a/modules/_layout.scss
+++ b/modules/_layout.scss
@@ -2,7 +2,7 @@
     #LAYOUT
 \*------------------------------------*/
 
-.layoutSingleColumn, 
+.layoutSingleColumn,
 %layoutSingleColumn {
     width: auto;
 
@@ -25,7 +25,7 @@
 }
 
 .layoutSingleColumn--extend {
-    @extend %layout-single-column;
+    @extend %layoutSingleColumn;
 
     @include mq(1024px) {
         width: 880px;
