--- a/modules/_pagination.scss
+++ b/modules/_pagination.scss
@@ -2,37 +2,37 @@
     #PAGINATION
 \*------------------------------------*/
 
+.pagination li {
+    display: inline-block;
+    margin-bottom: half($base-spacing-unit);
+}
+
 /**
  * This is to override bootstraps specifity of pagiation. Normally this
  * level of nesting would not be allowed. 
  */
-.pagination--secondary li a {
-    color: $btn-secondary-color;
-    background-color: $btn-secondary-bg;
-    border-color: $btn-secondary-border;
+.pagination-secondary li a {
+    @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border);
 }
 
-
-.pagination-prev {
-    float: left;  
+.pagination__prev {
+    float: left;
 }
 
-.pagination-prev-link:before {
-    content: "\00AB" "\00A0";
-}
-
-
-
-.pagination-next {
+.pagination__next {
     float: right;
 }
 
-.pagination-prev-link:after {
+.pagination__prev a:before,
+.pagination__next a:after {
+    font-size: 20px;
+}
+
+.pagination__prev a:before {
+    content: "\00AB" "\00A0";
+}
+
+.pagination__next a:after {
     content: "\00A0" "\00BB";
 }
 
-
-.pagination-prev-link:before,
-.pagination-prev-link:after {
-    font-size: 20px;  
-} 
