--- a/modules/_list-block.scss
+++ b/modules/_list-block.scss
@@ -8,13 +8,8 @@
     padding: 0;
     list-style: none;
 
-    > li {
-        @extend %listBlock-item;
+    > li,
+    > li > a {
+        display: block
     }
-
-}
-
-.listBlock-item,
-%listBlock-item {
-    padding: $base-spacing-unit;
 }
