--- a/modules/_list-inline.scss
+++ b/modules/_list-inline.scss
@@ -15,7 +15,8 @@ $listInlineDelimitCharacter:   ",\00A0" !default;
     padding: 0;
     list-style: none;
 
-    > li {
+    > li,
+    > li > a {
         display: inline-block;
     }
 }
