--- a/variables/_buttons.scss
+++ b/variables/_buttons.scss
@@ -5,13 +5,13 @@
 $btn-font-size:           16px;
 $btn-border-size:         1px;
 
-$btn-secondary-color:     #fff;
-$btn-secondary-bg:        $color-secondary;
+$btn-secondary-color:     $colorCru-white;
+$btn-secondary-bg:        $colorCru-gray;
 $btn-secondary-border:    #595455;
 
 $btn-subtle-color:        #6d6e71;
 $btn-subtle-bg:           #f4f4f4;
 $btn-subtle-border:       #e7e7e7;
-$btn-subtle-state-color:  $color-white;
+$btn-subtle-state-color:  $colorCru-white;
 $btn-subtle-state-bg:     #666062;
 $btn-subtle-state-border: #595455;
