--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -206,8 +206,6 @@
 @import "modules/list-ui";
 @import "modules/pagination";
 @import "modules/pullquotes";
-@import "modules/rules";
-
 
 /**
  * Bootstrap Components w/ JavaScript
@@ -227,5 +225,5 @@
 /**
  * Crubrand Overrides
  */
-@import "generic/helpers";
+@import "generic/utilities";
 @import "generic/spacing";
