--- a/bootstrap-variations/_forms.scss
+++ b/bootstrap-variations/_forms.scss
@@ -131,10 +131,10 @@ output {
   @include placeholder;
 
   &:focus {
-    border-color: $color-blue-bright;
+    border-color: $colorCru-blueBright;
     outline: 0;
   }
-  
+
   // Disabled and read-only inputs
   //
   // HTML5 says that controls under a fieldset > legend:first-child won't be
@@ -500,7 +500,7 @@ input[type="checkbox"] {
         margin-bottom: 0;
         padding-top: ($padding-base-vertical + 1); // Default padding plus a border
     }
-    
+
     // Account for padding we're adding to ensure the alignment and of help text
     // and other content below items
     .radio,
@@ -542,7 +542,7 @@ input[type="checkbox"] {
             }
         }
     }
-    
+
     .form-group-sm {
         @media (min-width: $screen-sm-min) {
             .control-label {
