--- a/generic/utilities/_text.scss
+++ b/generic/utilities/_text.scss
@@ -39,9 +39,7 @@
 /**
  * Prevent whitespace wrapping
  */
-.u-textNoWrap, %u-textNoWrap {
-  white-space: nowrap !important;
-}
+.u-textNoWrap, %u-textNoWrap { white-space: nowrap !important; }
 
 /**
  * Text truncation
@@ -62,12 +60,26 @@
   word-wrap: normal !important; /* 2 */
 }
 
+
+
+/**
+ * Text Sizing
+ */
+.u-textSize-small, %u-textSize-small { font-size: $fontSize-small !important; }
+
+
+
 /**
  * Font weights
  */
-.weight--light,      %weight--light     { font-weight: $font-weight-1 !important; }
-.weight--semi-light, %weight--semilight { font-weight: $font-weight-3 !important; }
-.weight--normal,     %weight--normal    { font-weight: $font-weight-4 !important; }
-.weight--semibold,   %weight--semibold  { font-weight: $font-weight-5 !important; }
-.weight--bold,       %weight--bold      { font-weight: $font-weight-6 !important; }
+.u-textWeight-light, %u-textWeight-light         { font-weight: $fontWeight1 !important; }
+.u-textWeight-semiLight, %u-textWeight-semiLight { font-weight: $fontWeight3 !important; }
+.u-textWeight-normal, %u-textWeight-normal       { font-weight: $fontWeight4 !important; }
+.u-textWeight-semiBold, %u-textWeight-semiBold   { font-weight: $fontWeight5 !important; }
+.u-textWeight-bold, %u-textWeight-bold           { font-weight: $fontWeight6 !important; }
 
+
+/**
+ * Apply capital case to an element (usually a `strong`).
+ */
+.u-textCaps, %u-textCaps { text-transform: uppercase !important; }
