--- a/variables/_spacing.scss
+++ b/variables/_spacing.scss
@@ -2,16 +2,20 @@
     #VARIABLES/COLORS
 \*------------------------------------*/
 
-$enable-margins:          true;
-$enable-margins--tiny:    false;
-$enable-margins--small:   false;
-$enable-margins--large:   false;
-$enable-margins--huge:    false;
-$enable-margins--none:    false;
+$base-margin:             $base-line-height !default;
+$base-padding:            $base-line-height !default;
 
-$enable-paddings:         false;
-$enable-paddings--tiny:   false;
-$enable-paddings--small:  false;
-$enable-paddings--large:  false;
-$enable-paddings--huge:   false;
-$enable-paddings--none:   false;
+$enable-margins:          false !default;
+$enable-margins--tiny:    false !default;
+$enable-margins--small:   false !default;
+$enable-margins--large:   false !default;
+$enable-margins--huge:    false !default;
+$enable-margins--none:    false !default;
+
+
+$enable-paddings:         false !default;
+$enable-paddings--tiny:   false !default;
+$enable-paddings--small:  false !default;
+$enable-paddings--large:  false !default;
+$enable-paddings--huge:   false !default;
+$enable-paddings--none:   false !default;
