--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -203,6 +203,7 @@
 @import "modules/cruicons";
 @import "modules/layout";
 @import "modules/list-bare";
+@import "modules/list-decimal";
 @import "modules/list-inline";
 @import "modules/list-block";
 @import "modules/list-ui";
