--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -174,9 +174,8 @@
 
 /* Crubrand variation of bootstrap's pagination */
 @import "bootstrap-variations/pagination";
+@import "bootstrap-variations/pager";
 
-
-@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/pager";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/labels";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/badges";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/jumbotron";
