--- a/modules/_pagination.scss
+++ b/modules/_pagination.scss
@@ -2,11 +2,6 @@
     #PAGINATION
 \*------------------------------------*/
 
-.pagination li {
-    display: inline-block;
-    margin-bottom: half($base-spacing-unit);
-}
-
 /**
  * This is to override bootstraps specifity of pagiation. Normally this
  * level of nesting would not be allowed.
@@ -19,23 +14,22 @@
      @include button-variant($btn-subtle-color, $btn-subtle-bg, $btn-subtle-border);
  }
 
-.pagination__prev {
-    float: left;
-}
 
-.pagination__next {
-    float: right;
-}
+ .pagination-prev:before,
+ .pagination-next:after,
+ .pager-prev:before,
+ .pager-next:after {
+     font-size: 20px;
+ }
 
-.pagination__prev a:before,
-.pagination__next a:after {
-    font-size: 20px;
-}
+ .pager-prev:before,
+ .pagination-prev:before {
+     content: "\2190";
+     margin-right: 0.4em;
+ }
 
-.pagination__prev a:before {
-    content: "\00AB" "\00A0";
-}
-
-.pagination__next a:after {
-    content: "\00A0" "\00BB";
-}
+ .pager-next:after,
+ .pagination-next:after {
+     content: "\2192";
+     margin-left: 0.4em;
+ }
