Updating button font sizes

--- a/bootstrap-variations/_buttons.scss
+++ b/bootstrap-variations/_buttons.scss
@@ -9,6 +9,7 @@
 .btn {
     display: inline-block;
     margin-bottom: 0; // For input.btn
+    font-size: $btn-font-size;
     font-weight: $btn-font-weight;
     text-align: center;
     vertical-align: middle;
@@ -42,7 +43,7 @@
     &.active {
         outline: 0;
         background-image: none;
-    
+
         @include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
     }
 
@@ -134,12 +135,12 @@
 
 .btn-lg {
     // line-height: ensure even-numbered height of button next to large input
-    @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-base, $line-height-large, $border-radius-large);
+    @include button-size($padding-large-vertical, $padding-large-horizontal, $btn-font-size-lg, $line-height-large, $border-radius-large);
 }
 .btn-sm,
 .btn-xs {
     // line-height: ensure proper height of button next to small input
-    @include button-size($padding-small-vertical, $padding-small-horizontal, $font-size-base, $line-height-small, $border-radius-small);
+    @include button-size($padding-small-vertical, $padding-small-horizontal, $btn-font-size-sm, $line-height-small, $border-radius-small);
 }
 
 
