--- a/variables/_buttons.scss
+++ b/variables/_buttons.scss
@@ -2,7 +2,10 @@
     #VARIABLES/BUTTONS
 \*------------------------------------*/
 
-$btn-font-size:           16px;
+$btn-font-size:           15px;
+$btn-font-size-sm:        13px;
+$btn-font-size-lg:        $font-size-base; 
+
 $btn-border-size:         1px;
 
 $btn-secondary-color:     $colorCru-white;
