--- a/variables/_colors.scss
+++ b/variables/_colors.scss
@@ -27,10 +27,10 @@ $colorText--link:   $colorCru-blueDeep;
 /**
  * Hightlight
  */
-$colorHightlight-info:    $brand-info;
-$colorHightlight-success: $brand-success;
-$colorHightlight-warning: $brand-warning;
-$colorHightlight-danger:  $brand-danger;
+$colorHighlight-info:    $brand-info;
+$colorHighlight-success: $brand-success;
+$colorHighlight-warning: $brand-warning;
+$colorHighlight-wanger:  $brand-danger;
 
 
 /**
