Login Screen Styles

--- a/generic/utilities/_text.scss
+++ b/generic/utilities/_text.scss
@@ -79,6 +79,14 @@
 .u-textWeight-bold, %u-textWeight-bold           { font-weight: $fontWeight6 !important; }
 
 
+
+/**
+ * Font weights
+ */
+.u-textUnderline, %u-textUnderline { text-decoration: underline; }
+
+
+
 /**
  * Apply capital case to an element (usually a `strong`).
  */
