--- a/bootstrap-variations/_forms.scss
+++ b/bootstrap-variations/_forms.scss
@@ -122,7 +122,7 @@ output {
   color: $input-color;
   background-color: $input-bg;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 2px solid $input-border;
+  border: 1px solid $input-border;
   border-radius: $input-border-radius;
   @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
@@ -131,7 +131,7 @@ output {
   @include placeholder;
 
   &:focus {
-    border-color: $colorCru-blueBright;
+    border-color: $colorCru-blueDeep;
     outline: 0;
   }
 
