Social Media Btn
Added variables for the colors

--- a/modules/_buttons.scss
+++ b/modules/_buttons.scss
@@ -72,13 +72,13 @@
 }
 
 .btn-facebook {
-  background-color: #4d6a9c;
+  background-color: $facebook;
 }
 
 .btn-google {
-  background-color: #d85740;
+  background-color: $googleplus;
 }
 
 .btn-twitter {
-  background-color: #2aafe1;
+  background-color: $twitter;
 }
