Color Variables for Social Media Btn

--- a/modules/_buttons.scss
+++ b/modules/_buttons.scss
@@ -74,13 +74,13 @@
 }
 
 .btnSocial--facebook {
-  background-color: #4d6a9c;
+  background-color: $facebook;
 }
 
 .btnSocial--google {
-  background-color: #d85740;
+  background-color: $googleplus;
 }
 
 .btnSocial--twitter {
-  background-color: #2aafe1;
+  background-color: $twitter;
 }
