Fix Spelling Error
SASS couldn't compile because of this spelling error.

--- a/variables/_colors.scss
+++ b/variables/_colors.scss
@@ -30,7 +30,7 @@ $colorText--link:   $colorCru-blueDeep;
 $colorHighlight-info:    $brand-info;
 $colorHighlight-success: $brand-success;
 $colorHighlight-warning: $brand-warning;
-$colorHighlight-wanger:  $brand-danger;
+$colorHighlight-danger:  $brand-danger;
 
 
 /**
