--- a/bootstrap-variations/_pagination.scss
+++ b/bootstrap-variations/_pagination.scss
@@ -87,10 +87,10 @@
 
 // Large
 .pagination-lg {
-    @include pagination-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $border-radius-base);
+    @include pagination-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-base);
 }
 
 // Small
 .pagination-sm {
-    @include pagination-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $border-radius-base);
+    @include pagination-size($padding-base-vertical, $padding-base-horizontal, $font-size-base, $line-height-base, $border-radius-base);
 }
